# jaxspec

./: .devcontainer.json  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  CODE_OF_CONDUCT.md  Dockerfile  Jaxspec.ipynb  LICENSE.md  README.md  README.rst  codecov.yml  image.Dockerfile  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: documentation-links.yml  publish.yml  python-app.yml  test-and-coverage.yml
docs/: conf.py  index.md  requirements.txt
docs/contribute/: index.md  internal.md  xspec.md
docs/css/: extra.css  material.css  xarray.css
docs/developer/: index.md
docs/examples/: PN.arf  PN.rmf  background.md  build_custom_model.ipynb  build_model.md  calibration.ipynb  custom_model.md  doc_variable.py  external_samplers.ipynb  fakeits.ipynb  fakeits.md  fitting_example.ipynb  fitting_example.md  index.md  load_data.ipynb  load_data.md  obs.pha  plot_0_basic_fit.py  plot_1_basic_fit.py  plot_2_build_model.py  plot_3_custom_component.py  plot_4_result_analysis.py  plot_5_load_data.py  plot_6_fakeits.py  plot_a_basic_fit.py  plot_b_build_model.py  plot_b_load_data.py  plot_c_result_analysis.py  plot_d_custom_component.py  readme.md  result_analysis.ipynb  work_with_arviz.ipynb
docs/faq/: cookbook.md  index.md
docs/frontpage/: installation.md
docs/javascripts/: mathjax.js
docs/models/: apec.md  index.md
docs/references/: abundance.md  additive.md  background.md  data.md  fitting.md  instrument.md  integrate.md  model.md  multiplicative.md  results.md
docs/runtime/: diagram.txt  result_table.txt
docs/runtime/various_model_graphs/: diagram.txt  model_complex.txt  model_simple.txt
docs/source/: api.rst  conf.py  contribute.rst  data.rst  index.rst  instrumental.rst  introduction.rst  model.rst  usage.rst
docs/source/notebooks/: demonstration.ipynb
docs/theory/: background.md  bayesian_inference.md  index.md  instrument.md
docs/tutorial/: basic_fit.ipynb  basic_fit.md  build_a_model.md  index.md  results_with_arviz
jaxspec/: __init__.py
jaxspec/model/: __init__.py  abc.py  additive.py  from_string.py  func1D.py  multiplicative.py
src/jaxspec/: __init__.py  fit.py
src/jaxspec/_fit/: _build_model.py
src/jaxspec/analysis/: _plot.py  compare.py  results.py
src/jaxspec/data/: __init__.py  folding.py  grouping.py  instrument.py  obsconf.py  observation.py  ogip.py  util.py
src/jaxspec/data/example_data/: MOS1background_spectrum.fits  PN.arf  PNbackground_spectrum.fits
src/jaxspec/experimental/: interpolator.py  interpolator_jax.py  intrument_models.py  nested_sampler.py  tabulated.py
src/jaxspec/fit/: __init__.py  _bayesian_model.py  _build_model.py  _fitter.py
src/jaxspec/instru/: ogip.py
src/jaxspec/model/: APEC.py  __init__.py  _graph_util.py  abc.py  additive.py  background.py  from_string.py  instrument.py  integrate.py  list.py  multiplicative.py
src/jaxspec/model/_additive/: apec.py  apec_loaders.py
src/jaxspec/scripts/: debug.py
src/jaxspec/util/: __init__.py  abundance.py  integrate.py  misc.py  online_storage.py  typing.py
tests/: clarsach_rsp.py  conftest.py  data_files.yml  data_hash.yml  ref_clarsach_rsp.py  test_apec.py  test_background.py  test_bayesian_model.py  test_bayesian_model_building.py  test_docs.py  test_fakeit.py  test_from_string.py  test_instrument.py  test_instruments.py  test_integrate.py  test_mcmc.py  test_misc.py  test_models.py  test_observation.py  test_ogip.py  test_repr.py  test_results.py  test_xspec.py  test_xspec_models.py
tests/data/ogip/: M1.arf  M2.arf  MOS1.arf  MOS1.pha  MOS2.arf  MOS2_spectrum_grp.fits  MOS2background_spectrum.fits  PN.arf  PN.pha  PN.rmf  nustar.arf  nustar_pha.pha  xmm_pha.fits
