[tool.poetry]
name = "jaxspec"
version = "0.0.3"
description = "jaxspec is a bayesian spectral fitting library for X-ray astronomy."
authors = ["sdupourque <sdupourque@irap.omp.eu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jax = "^0.4.23"
jaxlib = "^0.4.23"
numpy = "^1.26.1"
pandas = "^2.2.0"
astropy = "^6.0.0"
numpyro = ">=0.13.2,<0.15.0"
dm-haiku = ">=0.0.11,<0.0.13"
networkx = "^3.1"
matplotlib = "^3.8.0"
arviz = "^0.17.0"
chainconsumer = "^1.0.0"
simpleeval = "^0.9.13"
cmasher = "^1.6.3"
gpjax = "^0.8.0"
jaxopt = "^0.8.1"
tinygp = "^0.3.0"
seaborn = "^0.13.1"
mkdocstrings = "^0.24.0"
sparse = "^0.15.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-jupyter = "^0.24.6"


[tool.poetry.group.test.dependencies]
chex = "^0.1.83"
mktestdocs = "^0.2.1"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
testbook = "^0.4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = ">=0.2.1,<0.4.0"
jupyterlab = "^4.0.7"
notebook = "^7.0.6"
ipywidgets = "^8.1.1"

[tool.ruff]
line-length = 130

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
