[tool.poetry]
name = "jaxspec"
version = "0.2.0"
description = "jaxspec is a bayesian spectral fitting library for X-ray astronomy."
authors = ["sdupourque <sdupourque@irap.omp.eu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/renecotyfanboy/jaxspec"
documentation = "https://jaxspec.readthedocs.io/en/latest/"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jax = "^0.4.37"
numpy = "<2.0.0"
pandas = "^2.2.0"
astropy = "^6.0.0"
numpyro = "^0.16.1"
networkx = "^3.1"
matplotlib = "^3.8.0"
arviz = ">=0.17.1,<0.21.0"
chainconsumer = "^1.1.2"
simpleeval = ">=0.9.13,<1.1.0"
cmasher = "^1.6.3"
jaxopt = "^0.8.1"
tinygp = "^0.3.0"
seaborn = "^0.13.1"
sparse = "^0.15.4"
optimistix = ">=0.0.7,<0.0.10"
scipy = "<1.15"
mendeleev = ">=0.15,<0.20"
jaxns = "^2.6.7"
pooch = "^1.8.2"
interpax = "^0.3.3"
watermark = "^2.4.3"
catppuccin = "^2.3.4"
flax = "^0.10.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.4.6"
mkdocstrings = {extras = ["python"], version = ">=0.24,<0.28"}
mkdocs-jupyter = "^0.25.0"


[tool.poetry.group.test.dependencies]
chex = "^0.1.83"
mktestdocs = "^0.2.1"
coverage = "^7.3.2"
pytest-cov = ">=4.1,<7.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
testbook = "^0.4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.5,<5.0"
ruff = ">=0.2.1,<0.9.0"
jupyterlab = "^4.0.7"
notebook = "^7.0.6"
ipywidgets = "^8.1.1"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["versioneer.py", "_version.py"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP", "W", "RUF"]
ignore = [
  "E501",
  "F841", # Local variable name is assigned to but never used
  "RUF001", # String contains ambiguous character (such as Greek letters)
  "RUF002", # Docstring contains ambiguous character (such as Greek letters)
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D200",
  "D202",
  "D203",
  "D204",
  "D205",
  "D209",
  "D212",
  "D213",
  "D301",
  "D400",
  "D401",
  "D403",
  "D413",
  "D415",
  "D417",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
  "F401", # Module imported but unused
  "F403", # 'from module import *' used; unable to detect undefined names
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jaxspec-debug-info = "jaxspec.scripts.debug:debug_info"
